# ek

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: python-app.yml
ek/: __init__.py  aws.py  collection.py  keys.py  model.py  table.py  template.py  test.py  test_local_dynamodb.py  test_model.py  test_table.py  test_template.py
ek/aws/: type_mapping.py
ek/entity_client/: base.py  conditions.py  local.py  options.py  responses.py  sync.py  test_conditions.py  test_local.py  test_sync.py
ek/rules/: executor.py  results.py  rules.py  test_executor.py  test_rules.py
