[tool.poetry]
name = "ektable"
version = "0.1.1"
description = ""
authors = ["Samuel Broster <sam@broster.dev>"]
readme = "README.md"
license = "MIT" 
homepage = "https://github.com/SamuelBroster/ek"
repository = "https://github.com/SamuelBroster/ek"
keywords = ["ek", "onetable", "python", "dynamo", "dynamodb", "aws", "one table", "one-table", "orm"]
packages = [
    { include = "ek" },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
boto3 = "^1.34.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pyyaml = "5.3.1" # Require <6 for pytest-docker-compose and 5.4.1 - 6.0 is broke PEP 517 builds
docker = "6.1.3" # https://stackoverflow.com/a/77651191/11908063
pytest-docker-compose = "^3.2.1"
boto3-stubs = {extras = ["dynamodb"], version = "^1.34.2"}

[tool.mypy]
exclude = [
  "^.*/test_.*\\.py$",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "UP", "B", "A", "COM", "C4", "PT", "SIM", "PERF", "RUF"]
ignore = ["C408", "COM812"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
